@@ -1,3 +1,7 @@
+* 2005-05-17 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Add signal handler to catch ctrl+c and ask to close docs -
+	James Graham's idea
+	
 * 2005-05-15 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Patch from James Graham to make Ctrl+P print
 	- Patch adapted from James to make new documents start in new windows
